--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "5.1.0",
     "framer-motion": "^4.1.17",
+    "google-maps-react": "^2.0.6",
     "netlify-cli": "^6.8.12",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.6",
