--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "bootstrap": "5.1.0",
+    "dot-env": "^0.0.1",
+    "firebase": "^9.0.2",
     "framer-motion": "^4.1.17",
     "google-maps-react": "^2.0.6",
     "netlify-cli": "^6.8.12",
